[project]
requires-python = ">=3.14"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]
# Default collection is limited to unit tests and CU-marked conformance tests.
# Legacy root suites remain runnable by explicit path, but are not part of the
# default compliance run because most do not carry requires_cu gating metadata.
testpaths = ["tests/unit", "conformance"]
python_files = ["test_*.py"]
addopts = "-v -p no:cacheprovider"
tmp_path_retention_policy = "all"
tmp_path_retention_count = 1
timeout = 120
markers = [
    "live: Tests requiring a running OPC UA server",
    "structure: Address space structure tests (read-only, no state changes)",
    "methods: Method call tests (trigger simulation — state changes expected)",
    "events: Event subscription and notification tests",
    "conformance: Full IJT specification conformance scenarios",
    "negative: Negative tests verifying that invalid operations are rejected",
]

[tool.bandit]
exclude_dirs = [".venv", ".venv_test", ".venv_ci", ".venv_wsl", ".venv_wsl_backup", "tests", "__pycache__", ".git"]
skips = ["B101"]

[tool.vulture]
# Vulture finds dead code in source. Tests are excluded because pytest fixture
# injection makes parameter names appear "unused" — they are not; pytest wires
# them by name. Scanning tests adds only false positives with no value.
exclude = ["tests/", "conftest.py", ".venv/", ".venv_test/", ".venv_ci/", "tmp/", "test-results/", "logs/"]
ignore_decorators = ["@pytest_asyncio.fixture", "@pytest.fixture", "@pytest.fixture(scope='session')", "@pytest.fixture(scope='function')"]

[tool.interrogate]
# 65% minimum docstring coverage on production code.
# Test functions (test_* / Test*) are excluded — they do not require docstrings.
fail-under = 65
ignore-init-method = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-regex = ["^test_", "^Test"]
verbose = 0

[tool.ruff]
# Intentionally overrides root pyproject.toml: line-length=120 (matches existing code style)
# and select=["E","F","I"] (minimal rules; security/complexity rules not enforced here).
# Set to py313 (not py314) to avoid ruff formatter bug #24041 — see root pyproject.toml.
target-version = "py313"
line-length = 120
# Cache inside tmp/ — ruff resolves this relative to the pyproject.toml location (not CWD).
cache-dir = "tmp/ruff-cache"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E402", "E731"]

[tool.coverage.run]
# Unit stage runs against tests/unit/ with --cov=helpers (library code only).
# Live conformance stage appends helper coverage diagnostics but overrides
# fail-under to 0; Phase 1 remains the hard coverage quality gate.
# Pass explicit --cov args to pytest for one-off custom live coverage runs.
# The omit list keeps venv and runner scaffolding out of coverage measurements.
omit = [
    "run_all_tests.py",
    ".venv/*",
    ".venv_test/*",
    ".venv_ci/*",
    "helpers/server_manager.py",
]

[tool.coverage.report]
# Unit coverage floor for helpers/.
fail_under = 95
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.pylint.main]
# sys.path insert ensures conformance test modules resolve when pylint runs from project root.
init-hook = "import sys; sys.path.insert(0, '.')"

[tool.pylint.messages-control]
disable = [
    "import-outside-toplevel",
    "wrong-import-position",
    "import-error",            # false positive: conformance modules resolve via pythonpath = ["."]
    "broad-exception-caught",  # OPC UA can raise many exception types; broad catch is intentional
    "unused-argument",         # pytest fixtures injected by name; can't use _
    "not-callable",
    "invalid-name",            # OPC UA PascalCase event fields and NodeIds
    "line-too-long",           # enforced by ruff line-length instead
    "missing-function-docstring",
    "disallowed-name",         # test scaffolding uses short names
    "too-few-public-methods",
    "too-many-public-methods",
    "too-many-instance-attributes",
    "too-many-statements",
    "too-many-branches",
    "too-many-return-statements",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "consider-using-with",
    "duplicate-code",
    # Conformance test files are inherently large — splitting would break readability
    "too-many-lines",
    # Local imports inside helper functions shadow top-level imports — intentional test pattern
    "reimported",
    # Fixture parameter names shadow module-level imports — standard pytest convention
    "redefined-outer-name",
    # Optional loop vars are sometimes retained for diagnostics in assertions/logging.
    "unused-variable",
    # Direct lambda calls used in test parametrize scaffolding
    "unnecessary-direct-lambda-call",
    # not (expr) style is sometimes clearer in assertion messages
    "superfluous-parens",
]

[tool.pylint.format]
max-line-length = 120
max-module-lines = 1200

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
# Check bodies of untyped functions — this removes [annotation-unchecked] notes
# from CI annotations and gives mypy full coverage of conformance test logic.
check_untyped_defs = true
# Exclude generated test/tool output that may be locked on Windows.
exclude = ["(?:^|.*[/\\\\])tmp[/\\\\]", "pytest-cache-files-.*"]
# Keep mypy's incremental cache inside tmp/ for CWD-independent operation.
# Note: mypy resolves cache_dir relative to CWD (not config file location), so
# this config only works when mypy runs from the project root (CI / runner).
cache_dir = "tmp/mypy-cache"

[tool.pyright]
# asyncua 1.2b2 uses class-based OPC UA primitive types (Int32, UInt32, etc.)
# that inherit from int/str/bytes. Plain int literals are not directly assignable
# to these types in pyright's type system, but are equivalent at runtime. Remove
# reportArgumentType suppression when asyncua ships stable 1.2.0 with corrected stubs.
reportArgumentType = "none"
# asyncua does not declare __all__ for its re-exported OPC UA constants
# (AttributeIds, StatusCodes, ObjectIds, etc.) — they are importable at runtime.
reportPrivateImportUsage = "none"
# asyncua DataValue.Value and Variant.Value are typed Optional but are always
# populated when an OPC UA read call returns successfully. Tests guard on read
# success before accessing .Value, so None-access is not possible at runtime.
reportOptionalMemberAccess = "none"
reportOptionalIterable = "none"
# IJT custom OPC UA data types (JoiningProcessIdentificationDataType, etc.) are
# generated from the spec and registered at runtime via asyncua type dictionary;
# they are not visible in asyncua's static type stubs.
reportAttributeAccessIssue = "none"
# asyncua DataValue bitwise ops (e.g. AccessLevel & 0x02) are valid at runtime;
# pyright cannot infer the int-compatible return type from asyncua's Optional stubs.
reportOperatorIssue = "none"

[[tool.mypy.overrides]]
# helpers/ contains generated OPC UA type stubs — too many unresolvable imports to check.
module = "helpers.*"
ignore_errors = true

[[tool.mypy.overrides]]
# PyYAML ships no inline types and types-PyYAML is not in CI deps.
# [import-untyped] is not suppressed by --ignore-missing-imports in mypy 1.0+.
# Wildcard covers yaml, yaml.constructor, yaml.loader, etc.
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# run_all_tests.py uses sys/subprocess/platform APIs that vary; not worth strict checking.
module = "run_all_tests"
ignore_errors = true

# ── asyncua stub gaps: per-file overrides (only files that actually need them) ──
# asyncua ships no type stubs — mypy resolves asyncua types as Any via ignore_missing_imports.
# Most test files are clean. The 17 files below fire specific stub defects listed here.
# All errors below are asyncua stub defects, not bugs in test logic:
#   arg-type   — ua.NodeId(int, ns): stub expects Int32|String|Guid|ByteString; int is fine at runtime
#   union-attr — DataValue.Value / Variant.Value typed Optional; always set after a successful read
#   attr-defined — IJT custom types decoded at runtime via asyncua type dictionary; not in static stubs
#   operator   — AccessLevel & 0x02 bitwise op on asyncua Int32 subclass; valid at runtime
# Grouped by which codes each file actually fires.

[[tool.mypy.overrides]]
module = [
    "assets.test_asset_management_structure",
    "conformance.test_asset_management",
    "conformance.test_events",
    "conformance.test_single_result_data",
    "events.data_types.test_event_data_types",
    "events.test_event_types_structure",
    "events.test_joining_system_events",
    "events.test_simulate_events",
    "joining_process.test_joining_process_structure",
    "joint.test_joint_management_structure",
    "results.test_result_events",
    "results.test_simulate_results",
]
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = ["conformance.test_joint_management"]
disable_error_code = ["union-attr"]

[[tool.mypy.overrides]]
module = ["conformance.test_result_access", "conformance.test_result_management"]
disable_error_code = ["arg-type", "union-attr"]

[[tool.mypy.overrides]]
module = ["conformance.test_joining_process"]
disable_error_code = ["arg-type", "attr-defined"]

[[tool.mypy.overrides]]
module = ["conformance.test_joining_system_base"]
disable_error_code = ["arg-type", "attr-defined", "operator", "union-attr"]

[[tool.mypy.overrides]]
# Unit tests use asyncua NodeId(int, int) construction (arg-type: asyncua stubs expect
# Int32|String|Guid|ByteString, plain int is identical at runtime) and mock patterns
# that replace async methods directly (method-assign). Both are valid at runtime.
# Blanket override covers all current and future tests/unit/ files — avoids having to
# extend this list every time a new unit test file is added.
module = ["tests.unit.*"]
disable_error_code = ["arg-type", "method-assign"]
